[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scene/Swipe/SwipeMno.gd" type="Script" id=1]
[ext_resource path="res://Font/FloatingMain.tres" type="DynamicFont" id=3]
[ext_resource path="res://Image/bg1080x1920.jpg" type="Texture" id=4]
[ext_resource path="res://Image/fullz-mno.png" type="Texture" id=5]
[ext_resource path="res://Image/home.png" type="Texture" id=9]
[ext_resource path="res://Image/tekgameHead_mno.png" type="Texture" id=12]
[ext_resource path="res://Image/tekgame_MusicalBass.png" type="Texture" id=13]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( -67.3611, 59.5225, 67.3611, -59.5225, 72.3857, 842.881, 0, 0, 0, 0, 481.026, 783.39, -51.8817, -68.1725, 51.8817, 68.1725, 1009.86, 843.884, 0, -61.4026, 0, 61.4026, 1052.28, 1070.16, 86.3647, -85.427, -86.3647, 85.427, 998.542, 1319.06, 0, 0, 0, 0, 517.088, 1370.56, 81.2715, 84.1635, -81.2715, -84.1635, 61.6022, 1325.61, 0, 0, 0, 0, 11.7728, 1071.86, -86.9237, 55.0452, 86.9237, -55.0452, 73.4862, 840.326 )
}

[sub_resource type="CircleShape2D" id=2]
radius = 50.5953

[sub_resource type="CapsuleShape2D" id=3]
radius = 20.3898
height = 30.7156

[node name="path2D" type="Path2D"]
position = Vector2( -6.14562, 3.47479 )
scale = Vector2( 1.00581, 0.995563 )
curve = SubResource( 1 )
script = ExtResource( 1 )

[node name="bg" type="Sprite" parent="."]
position = Vector2( 2.99658, 0 )
texture = ExtResource( 4 )
centered = false

[node name="PathFollow2D" type="PathFollow2D" parent="."]
position = Vector2( 72.3857, 842.881 )
rotate = false

[node name="Area2DHead" type="Area2D" parent="PathFollow2D" groups=["Mno"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PathFollow2D/Area2DHead"]
shape = SubResource( 2 )

[node name="tekgameHead_mno" type="Sprite" parent="PathFollow2D/Area2DHead"]
texture = ExtResource( 12 )

[node name="fullz-mno" type="Sprite" parent="."]
position = Vector2( 563.169, 1105.78 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 5 )

[node name="Area2DMusicalBass" type="Area2D" parent="."]
position = Vector2( 286.179, 76.553 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DMusicalBass"]
shape = SubResource( 3 )

[node name="tekgame_MusicalBass" type="Sprite" parent="Area2DMusicalBass"]
texture = ExtResource( 13 )

[node name="ClickMno" type="Label" parent="."]
margin_left = 520.981
margin_top = 970.846
margin_right = 583.981
margin_bottom = 1017.85
custom_colors/font_color = Color( 0.878431, 0.537255, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "999"
align = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="ClickT" type="Label" parent="."]
margin_left = 409.88
margin_top = 1200.54
margin_right = 599.88
margin_bottom = 1247.54
custom_colors/font_color = Color( 0.921875, 0.129639, 0.129639, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Total : 0"
align = 1

[node name="HomeBT" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 936.0
margin_top = 1559.0
margin_right = 1064.0
margin_bottom = 1687.0
texture_normal = ExtResource( 9 )

[connection signal="input_event" from="PathFollow2D/Area2DHead" to="." method="_on_Area2DHead_input_event"]
[connection signal="area_entered" from="Area2DMusicalBass" to="." method="_on_Area2DMusicalBass_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="HomeBT" to="." method="_on_HomeBT_pressed"]
